CREATE TABLE time_deal_schema.p_interested_deal (
    id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    time_deal_id uuid NOT NULL,
    user_id bigint NOT NULL
);
ALTER TABLE time_deal_schema.p_interested_deal ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME time_deal_schema.p_interested_deal_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);
CREATE TABLE time_deal_schema.p_stock_log (
    id uuid NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    created_by bigint,
    deleted_at timestamp(6) without time zone,
    deleted_by bigint,
    updated_at timestamp(6) without time zone NOT NULL,
    updated_by bigint,
    description text,
    event_type character varying(255) NOT NULL,
    order_id uuid,
    quantity bigint,
    time_deal_stock_id uuid NOT NULL,
    CONSTRAINT p_stock_log_event_type_check CHECK (((event_type)::text = ANY ((ARRAY['RESERVE'::character varying, 'SELL'::character varying, 'INIT'::character varying, 'RESERVE_CANCEL'::character varying, 'PAYMENT_CANCEL'::character varying, 'ROLLBACK'::character varying, 'ADMIN_CONTROL'::character varying])::text[])))
);
CREATE TABLE time_deal_schema.p_time_deal (
    id uuid NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    created_by bigint,
    deleted_at timestamp(6) without time zone,
    deleted_by bigint,
    updated_at timestamp(6) without time zone NOT NULL,
    updated_by bigint,
    limit_quantity bigint,
    end_at timestamp without time zone NOT NULL,
    start_at timestamp without time zone NOT NULL,
    discount_price bigint NOT NULL,
    status character varying(255) NOT NULL,
    description character varying(255) NOT NULL,
    seller_id bigint NOT NULL,
    title character varying(255) NOT NULL,
    CONSTRAINT p_time_deal_status_check CHECK (((status)::text = ANY ((ARRAY['SCHEDULED'::character varying, 'IN_PROGRESS'::character varying, 'SOLD_OUT'::character varying, 'ENDED'::character varying])::text[])))
);
CREATE TABLE time_deal_schema.p_time_deal_product (
    id uuid NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    created_by bigint,
    deleted_at timestamp(6) without time zone,
    deleted_by bigint,
    updated_at timestamp(6) without time zone NOT NULL,
    updated_by bigint,
    product_option_id uuid NOT NULL,
    product_id uuid NOT NULL,
    status character varying(255) NOT NULL,
    time_deal_id uuid NOT NULL,
    CONSTRAINT p_time_deal_product_status_check CHECK (((status)::text = ANY ((ARRAY['IN_STOCK'::character varying, 'OUT_OF_STOCK'::character varying])::text[])))
);
CREATE TABLE time_deal_schema.p_time_deal_stock (
    id uuid NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    created_by bigint,
    deleted_at timestamp(6) without time zone,
    deleted_by bigint,
    updated_at timestamp(6) without time zone NOT NULL,
    updated_by bigint,
    option_id uuid NOT NULL,
    product_id uuid NOT NULL,
    original_price numeric(12,2),
    status character varying(255) NOT NULL,
    available_stock bigint NOT NULL,
    reserved_stock bigint NOT NULL,
    sold_stock bigint NOT NULL,
    time_deal_id uuid NOT NULL,
    version bigint NOT NULL,
    time_deal_product_id uuid NOT NULL,
    CONSTRAINT p_time_deal_stock_status_check CHECK (((status)::text = ANY ((ARRAY['AVAILABLE'::character varying, 'RESERVED'::character varying, 'SOLD'::character varying, 'PAUSED'::character varying])::text[])))
);
ALTER TABLE ONLY time_deal_schema.p_interested_deal
    ADD CONSTRAINT p_interested_deal_pkey PRIMARY KEY (id);
ALTER TABLE ONLY time_deal_schema.p_stock_log
    ADD CONSTRAINT p_stock_log_pkey PRIMARY KEY (id);
ALTER TABLE ONLY time_deal_schema.p_time_deal
    ADD CONSTRAINT p_time_deal_pkey PRIMARY KEY (id);
ALTER TABLE ONLY time_deal_schema.p_time_deal_product
    ADD CONSTRAINT p_time_deal_product_pkey PRIMARY KEY (id);
ALTER TABLE ONLY time_deal_schema.p_time_deal_stock
    ADD CONSTRAINT p_time_deal_stock_pkey PRIMARY KEY (id);
ALTER TABLE ONLY time_deal_schema.p_time_deal_stock
    ADD CONSTRAINT uk8dhlyjk97y72ghkdenedm9bh0 UNIQUE (time_deal_product_id);
ALTER TABLE ONLY time_deal_schema.p_interested_deal
    ADD CONSTRAINT uk_interested_deal_user_deal UNIQUE (user_id, time_deal_id);
CREATE INDEX idx_interested_deal_time_deal ON time_deal_schema.p_interested_deal USING btree (time_deal_id);
CREATE INDEX idx_interested_deal_user ON time_deal_schema.p_interested_deal USING btree (user_id);
ALTER TABLE ONLY time_deal_schema.p_time_deal_stock
    ADD CONSTRAINT fk55ga0pojhnxhiglhjwu4k8sbj FOREIGN KEY (time_deal_product_id) REFERENCES time_deal_schema.p_time_deal_product(id);
ALTER TABLE ONLY time_deal_schema.p_time_deal_product
    ADD CONSTRAINT fk6dj4c9k09fmrwcvly2fhqq67t FOREIGN KEY (time_deal_id) REFERENCES time_deal_schema.p_time_deal(id);
ALTER TABLE ONLY time_deal_schema.p_stock_log
    ADD CONSTRAINT fkbpnydjs9yco54qesy9wnso7st FOREIGN KEY (time_deal_stock_id) REFERENCES time_deal_schema.p_time_deal_stock(id);
\unrestrict HLPMDZKBP28AvbU0Gdy7kiyx52RPUcM6DVQ6cC3Ncz4i40brDAUA2SFBIVlcaBc
