CREATE TABLE user_schema.p_admin_audit_log (
    id bigint NOT NULL,
    action character varying(32) NOT NULL,
    admin_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    details character varying(500),
    target_user_id bigint NOT NULL,
    CONSTRAINT p_admin_audit_log_action_check CHECK (((action)::text = ANY ((ARRAY['ROLE_CHANGED'::character varying, 'BLOCKED'::character varying, 'UNBLOCKED'::character varying, 'DELETED'::character varying])::text[])))
);
ALTER TABLE user_schema.p_admin_audit_log ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME user_schema.p_admin_audit_log_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);
CREATE TABLE user_schema.p_point_history (
    id uuid NOT NULL,
    amount bigint,
    balance_after bigint,
    confirmed_at timestamp(6) without time zone,
    created_at timestamp(6) without time zone NOT NULL,
    order_id character varying(255),
    saga_id character varying(255),
    type character varying(255),
    user_id bigint,
    CONSTRAINT p_point_history_type_check CHECK (((type)::text = ANY ((ARRAY['EARN_PENDING'::character varying, 'EARN_CONFIRM'::character varying, 'EARN'::character varying, 'USE_PENDING'::character varying, 'USE_CONFIRM'::character varying, 'EARN_CANCEL'::character varying, 'USE_CANCEL'::character varying])::text[])))
);
CREATE TABLE user_schema.p_shipping_address (
    address_id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    created_by bigint,
    deleted_at timestamp(6) without time zone,
    deleted_by bigint,
    updated_at timestamp(6) without time zone NOT NULL,
    updated_by bigint,
    address_base character varying(255) NOT NULL,
    address_detail character varying(255) NOT NULL,
    delivery_message character varying(100),
    is_default boolean NOT NULL,
    recipient_name character varying(50) NOT NULL,
    recipient_phone character varying(20) NOT NULL,
    user_id bigint NOT NULL,
    zip_code character varying(5) NOT NULL
);
ALTER TABLE user_schema.p_shipping_address ALTER COLUMN address_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME user_schema.p_shipping_address_address_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);
CREATE TABLE user_schema.p_user (
    user_id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    created_by bigint,
    deleted_at timestamp(6) without time zone,
    deleted_by bigint,
    updated_at timestamp(6) without time zone NOT NULL,
    updated_by bigint,
    email character varying(255) NOT NULL,
    is_blocked boolean DEFAULT false NOT NULL,
    name character varying(255) NOT NULL,
    password character varying(255) NOT NULL,
    role character varying(255) NOT NULL,
    CONSTRAINT p_user_role_check CHECK (((role)::text = ANY ((ARRAY['USER'::character varying, 'SELLER'::character varying, 'MASTER'::character varying])::text[])))
);
ALTER TABLE user_schema.p_user ALTER COLUMN user_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME user_schema.p_user_user_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);
ALTER TABLE ONLY user_schema.p_admin_audit_log
    ADD CONSTRAINT p_admin_audit_log_pkey PRIMARY KEY (id);
ALTER TABLE ONLY user_schema.p_point_history
    ADD CONSTRAINT p_point_history_pkey PRIMARY KEY (id);
ALTER TABLE ONLY user_schema.p_shipping_address
    ADD CONSTRAINT p_shipping_address_pkey PRIMARY KEY (address_id);
ALTER TABLE ONLY user_schema.p_user
    ADD CONSTRAINT p_user_pkey PRIMARY KEY (user_id);
ALTER TABLE ONLY user_schema.p_user
    ADD CONSTRAINT ukogywo3ggsigo9oljx32xua8hg UNIQUE (email);
CREATE INDEX idx_audit_admin ON user_schema.p_admin_audit_log USING btree (admin_id);
CREATE INDEX idx_audit_created ON user_schema.p_admin_audit_log USING btree (created_at DESC);
CREATE INDEX idx_audit_target ON user_schema.p_admin_audit_log USING btree (target_user_id);
\unrestrict gtVtNd4LcfxLAob38NNGQm6j4813GWrsa1JvzgogqHirj9kzzgiA6cu9Liv5Aoy
